service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-k8s
spec:
  selector:
    app: nodejs-k8s
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
