backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-backend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Ensure the correct ingress controller is used
spec:
  rules:
  - host: a7f784e35db984efbbb175fb2dc129c0-486246873.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejs-k8s
            port:
              number: 80
